# MeshSync

Plugin~/: CMakeLists.txt  build_android.sh
Plugin~/Src/MeshSync/SceneCache/: BufferEncoder.cpp
